[package]
name = "mist-dom"
version = "0.1.0"
authors = ["Hikaru Terazono (3c1u) <298748+3c1u@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mist-dom-parser = { path = "../mist-dom-parser" }
proc-macro-hack = "0.5.10"
